finished parser kinda and added build-system

--- a/TODO
+++ b/TODO
@@ -3,8 +3,7 @@
     ☐ add unicode support
 ☐ parser
     ☐ add tests
-    ☐ separteb lexer from parser
-    ☐ custom exceptions
+    ☐ change all std::runtime_error to ParserError
 ☐ unittest
     ☐ README
 
