--- a/TODO
+++ b/TODO
@@ -12,19 +12,18 @@
     ✔ Add Parser<std::monostate> Error(std::string messgae): always fails and uses message and ParseError Message @done(21-12-02 20:17)
     ✔ Add Count(parser, n) = Quantified(parser, min=n, max=n) @done(21-12-02 20:19)
     ✔ Between(open, parser, close) = open >> parser << close @done(21-12-02 20:29)
-    ☐ Chain(parser, op, min, max) op:pair<parser, Left or Right assosiative>
-    ☐ Chain(parser, vector<ops>)
+    ✔ Chain(parser, vector<ops>) @done(21-12-03 01:06)
     ✔ Suffixed(parser, suffix) = parser << suffix @done(21-12-02 20:34)
     ✔ Prefixed(prefix, parser) = prefix >> suffix @done(21-12-02 20:34)
-    ☐ LookAhead(parser): parsers parse but goes bback to original stream position
-    ☐ Regex()
-        ☐ Char()
-        ☐ Chars()
-        ☐ EOS()
-        ☐ AnyChar()
-        ☐ Letters()
-        ☐ Digits()
-        ☐ AlphaNum()
+    ✔ LookAhead(parser): parsers parse but goes bback to original stream position @done(21-12-02 22:59)
+    ✔ Regex() @done(21-12-02 23:32)
+        ✔ Char() @done(21-12-02 23:32)
+        ✔ Chars() @done(21-12-02 23:32)
+        ✔ EOS() @done(21-12-02 23:32)
+        ✔ AnyChar() @done(21-12-02 23:32)
+        ✔ Letters() @done(21-12-02 23:32)
+        ✔ Digits() @done(21-12-02 23:32)
+        ✔ AlphaNum() @done(21-12-02 23:32)
 
 ☐ unittest
     ☐ README
