--- a/TODO
+++ b/TODO
@@ -25,8 +25,8 @@
         ✔ Digits() @done(21-12-02 23:32)
         ✔ AlphaNum() @done(21-12-02 23:32)
 ☐ c++/rxd
-    ☐ change screen coords to -1 to 1 on x and y
-    ☐ take away vertex shader as parameter so that it isn't calculated multiple times per vertex if triangle share a vertex
+    ✔ change screen coords to -1 to 1 on x and y @done(21-12-21 23:42)
+    ✔ take away vertex shader as parameter so that it isn't calculated multiple times per vertex if triangle share a vertex @done(21-12-21 23:54)
     ☐ depth buffer
     ☐ perspective interpolation
     ☐ threading: send mesh (ptr) to a thread to have vertex shader applied to all vertices, then when it's finished, have it send the mesh (ptr) to a queue on the main thread to be rendered
